--- a/html/SolumChat.html
+++ b/html/SolumChat.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Física, Mecânica, Termologia, Óptica, Eletromagnetismo, Chat, SolumChat, Aprender Física">
     <meta name="author" content="Azazel Admetus">
     <link rel="icon" href="../image/logo-aba.png" type="image/png">
-    <link rel="stylesheet" href="../css/SolumChat.css">
+    <link rel="stylesheet" href="../css/SolumChat.css?v=1.1">
     <title>SolumChat - Tire suas dúvidas sobre Física Clássica</title>
 </head>
 <body>
@@ -28,6 +28,7 @@
         </form>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@7.0.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
     <script>
     /* ========== Persona ========== */
     class SolumFormatter {
@@ -59,28 +60,66 @@
     const chatMensagens = document.getElementById("chatMensagens");
     const formChat = document.getElementById("formChat");
     const inputMensagem = document.getElementById("inputMensagem");
+    const tituloDinamico = document.getElementById("tituloDinamico");
+
 
     const temas = ["mecanica", "termologia", "ondulatoria", "optica", "eletromagnetismo", "biografia", "caelum"];
     let todosOsDados = [];
     
-    async function carregarTodosOsTemas(){
-        for(const tema of temas){
-            const res = await fetch(`../js/JSON/${tema}.json`);
-            const dados = await res.json();
-            todosOsDados.push(...dados.map(d => ({ ...d, tema })));
+    async function carregarTodosOsTemas() {
+        for (const tema of temas) {
+            // 1️⃣ Carregar JSON
+            try {
+                const resJson = await fetch(`../js/JSON/${tema}.json`);
+                const dadosJson = await resJson.json();
+                todosOsDados.push(...dadosJson.map(d => ({ ...d, tema })));
+            } catch(e) {
+                console.warn(`Erro carregando JSON do tema ${tema}:`, e);
+            }
+
+            // 2️⃣ Carregar CSV com três colunas: pergunta,resposta,tags
+            try {
+                const resCsv = await fetch(`../js/CSV/${tema}.csv`);
+                const textoCsv = await resCsv.text();
+                const linhas = textoCsv.split("\n");
+
+                linhas.forEach(linha => {
+                    const [pergunta, resposta, tags] = linha.split(",");
+                    if(pergunta && resposta) {
+                        todosOsDados.push({
+                            perguntas: [pergunta.trim()],
+                            resposta: resposta.trim(),
+                            tema,
+                            tags: tags ? tags.split(";").map(t => t.trim()) : []
+                        });
+                    }
+                });
+            } catch(e) {
+                console.warn(`Erro carregando CSV do tema ${tema}:`, e);
+            }
         }
+
+        return todosOsDados;
     }
-    carregarTodosOsTemas();
+
 
 
     /* Fuse.js-like search simplificado */
-    function buscarResposta(userInput){
+    function buscarResposta(userInput) {
         const lower = userInput.toLowerCase();
-        for(const item of todosOsDados){
-            for(const p of item.perguntas){
-                if(lower.includes(p)) return `[${item.tema}]: ${item.resposta}`;
+
+        for (const item of todosOsDados) {
+            // 1️⃣ Verifica se alguma pergunta bate
+            if (item.perguntas.some(p => lower.includes(p.toLowerCase()))) {
+                return `[${item.tema}]: ${item.resposta}`;
+            }
+
+            // 2️⃣ Se não bateu, verifica tags
+            if (item.tags && item.tags.some(tag => lower.includes(tag.toLowerCase()))) {
+                return `[${item.tema}]: ${item.resposta}`;
             }
         }
+
         return null;
     }
 
@@ -96,40 +135,113 @@
     }
 
     /* Funções de chat */
-    function adicionarMensagem(texto, tipo){
+    function adicionarMensagem(texto, tipo) {
         const div = document.createElement("div");
         div.classList.add("mensagem", tipo);
-        div.innerHTML = `<p>${texto}</p>`;
+
+        // avatar
+        const avatar = document.createElement("img");
+        avatar.classList.add("avatar");
+        avatar.alt = tipo === "solum" ? "Avatar Solum" : "Avatar Usuário";
+
+        // caminhos — verifique se existem esses arquivos. se não, tem fallback abaixo.
+        avatar.src = tipo === "solum" ? "../image/AvatarSolum.png" : "../image/AvatarUser.png";
+
+        // fallback SVG caso a imagem externa não carregue
+        avatar.onerror = () => {
+            const svg = encodeURIComponent(
+                tipo === "solum"
+                ? `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect width='100%' height='100%' fill='#4a5841'/><circle cx='32' cy='22' r='12' fill='#fff'/></svg>`
+                : `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect width='100%' height='100%' fill='#3a3a3a'/><circle cx='32' cy='20' r='12' fill='#fff'/></svg>`
+            );
+            avatar.src = "data:image/svg+xml;utf8," + svg;
+            avatar.onerror = null;
+        };
+
+        // parágrafo com classe 'texto' (importante para o CSS)
+        const p = document.createElement("p");
+        p.classList.add("texto");
+        p.textContent = texto;
+
+        // APPEND: avatar primeiro, depois texto.
+        // Com o CSS que você já tem (.mensagem.usuario { flex-direction: row-reverse; }),
+        // isso garante que o avatar do usuário apareça à direita visualmente.
+        div.appendChild(avatar);
+        div.appendChild(p);
+
         chatMensagens.appendChild(div);
-        chatMensagens.scrollTop = chatMensagens.scrollHeight;
+
+        // Scroll inteligente: só auto-scroll se o usuário estiver perto do fim
+        const distanciaDoFim = chatMensagens.scrollHeight - chatMensagens.scrollTop - chatMensagens.clientHeight;
+        const estaPertoDoFim = distanciaDoFim < 50;
+        if (estaPertoDoFim) {
+            chatMensagens.scrollTop = chatMensagens.scrollHeight;
+        }
+
+        return div;
     }
 
     function gerarRespostaInteligente(userInput){
         const lower = userInput.toLowerCase();
 
+        // Recupera da memória
         const mem = tentarRecuperar(lower);
         if(mem) return mem;
 
+        // Busca nos JSONs
         const respostaBase = buscarResposta(userInput);
+
+        // Se achou, formata com a persona
         const resposta = solumFormatter.formatResponse(userInput, respostaBase);
 
+        // Salva na memória
         registrarPergunta(lower, resposta);
         return resposta;
     }
 
+    // =======================
+    // 1) Função para esconder/remover o título dinâmico (apenas na 1ª mensagem)
+    // =======================
+    function hideTituloDinamico() {
+        if (!tituloDinamico) return;
+        if (!tituloDinamico.classList.contains('hidden')) {
+            tituloDinamico.classList.add('hidden');
+
+            // remove o elemento ao terminar a animação (mais robusto que setTimeout)
+            function onAnimEnd() {
+                tituloDinamico.removeEventListener('animationend', onAnimEnd);
+                if (tituloDinamico.parentNode) tituloDinamico.parentNode.removeChild(tituloDinamico);
+            }
+            tituloDinamico.addEventListener('animationend', onAnimEnd);
+
+            // fallback caso a animação não dispare
+            setTimeout(() => {
+                if (tituloDinamico.parentNode) tituloDinamico.parentNode.removeChild(tituloDinamico);
+            }, 900);
+        }   
+    }
 
     /* Envio */
-    formChat.addEventListener("submit", function(e){
+    formChat.addEventListener("submit", function(e) {
         e.preventDefault();
         const msg = inputMensagem.value.trim();
-        if(!msg) return;
+        if (!msg) return;
 
+        // Esconde o título na primeira mensagem
+        hideTituloDinamico();
+
+        // Mostra a mensagem do usuário
         adicionarMensagem(msg, "usuario");
-        let resposta = gerarRespostaInteligente(msg);
-        resposta = solumFormatter.formatResponse(msg, resposta);
-        setTimeout(()=> adicionarMensagem(resposta, "solum"), 300);
 
-        inputMensagem.value="";
+        // Gera resposta (já formatada dentro de gerarRespostaInteligente)
+        let resposta = gerarRespostaInteligente(msg);
+
+        setTimeout(() => {
+            adicionarMensagem(resposta, "solum");
+            if (typeof falar === "function") falar(resposta);
+        }, 300);
+
+        inputMensagem.value = "";
     });
 
     </script>
